fix: overflow in main disabled

--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,7 @@ html {
 
 main {
     min-height: calc(100vh - 370px);
+    overflow-x: hidden;
   }
 
 @media (min-width: 1280px) {
